#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
é€šç”¨æ‰¹é‡è¿ç§»è„šæœ¬
è¿ç§»æ‰€æœ‰å‰©ä½™çš„ REQ æ¶ˆæ¯
"""

import sqlite3
import re
from pathlib import Path
from typing import List, Dict

class UniversalMigrator:
    """é€šç”¨æ‰¹é‡è¿ç§»å™¨"""
    
    def __init__(self, db_path: str, project_root: Path):
        self.db_path = db_path
        self.project_root = project_root
        self.jprotobuf_dir = project_root / 'src/main/java/com/dnfm/mina/protobuf'
    
    def _connect(self):
        """è¿æ¥åˆ°æ•°æ®åº“"""
        conn = sqlite3.connect(self.db_path)
        conn.row_factory = sqlite3.Row
        return conn
    
    def get_unmigrated_messages(self) -> List[Dict]:
        """è·å–æ‰€æœ‰æœªè¿ç§»çš„æ¶ˆæ¯"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT 
                jm.message_name,
                jm.file_path,
                jm.module_id,
                jm.field_count
            FROM jprotobuf_messages jm
            WHERE jm.message_type = 'REQ' 
            AND jm.id NOT IN (SELECT mr.jprotobuf_message_id FROM migration_records mr)
            ORDER BY jm.module_id, jm.message_name
        ''')
        
        results = [dict(row) for row in cursor.fetchall()]
        conn.close()
        
        return results
    
    def get_module_name(self, module_id: int) -> str:
        """æ ¹æ® ModuleID è·å–æ¨¡å—å"""
        if module_id is None:
            return 'UNKNOWN'
        if 10000 <= module_id < 11000:
            return 'BASIC'
        elif 11000 <= module_id < 12000:
            return 'CHARACTER'
        elif 12000 <= module_id < 13000:
            return 'DUNGEON'
        elif 13000 <= module_id < 14000:
            return 'TOWN'
        elif 14000 <= module_id < 15000:
            return 'ITEM'
        elif 15000 <= module_id < 16000:
            return 'EQUIP'
        elif 16000 <= module_id < 17000:
            return 'SKILL'
        elif 17000 <= module_id < 18000:
            return 'TASK'
        elif 18000 <= module_id < 19000:
            return 'SOCIAL'
        elif 19000 <= module_id < 20000:
            return 'GUILD'
        elif 20000 <= module_id < 21000:
            return 'AUCTION'
        elif 21000 <= module_id < 22000:
            return 'MALL'
        elif 22000 <= module_id < 23000:
            return 'PAYMENT'
        elif 23000 <= module_id < 24000:
            return 'CROSS_SERVER'
        elif 24000 <= module_id < 25000:
            return 'BATTLE'
        else:
            return 'OTHER'
    
    def convert_field_type(self, jprotobuf_type: str) -> str:
        """è½¬æ¢ JProtobuf å­—æ®µç±»å‹åˆ° Protobuf å­—æ®µç±»å‹"""
        type_map = {
            'STRING': 'string',
            'INT32': 'int32',
            'INT64': 'int64',
            'UINT32': 'uint32',
            'UINT64': 'uint64',
            'FLOAT': 'float',
            'DOUBLE': 'double',
            'BOOL': 'bool',
            'OBJECT': 'message',
            'BYTES': 'bytes'
        }
        return type_map.get(jprotobuf_type, 'string')
    
    def convert_message_name(self, jprotobuf_name: str) -> str:
        """è½¬æ¢ JProtobuf æ¶ˆæ¯ååˆ° Protobuf æ¶ˆæ¯å"""
        # ç§»é™¤ REQ_ å‰ç¼€
        name = jprotobuf_name.replace('REQ_', '')
        
        # è½¬æ¢ä¸º PascalCase
        parts = name.split('_')
        pascal_case = ''.join(part.capitalize() for part in parts)
        
        # æ·»åŠ  Request åç¼€
        return pascal_case + 'Request'
    
    def read_jprotobuf_file(self, file_path: str) -> Dict:
        """è¯»å– JProtobuf æ–‡ä»¶"""
        full_path = self.project_root / file_path
        if not full_path.exists():
            return {}
        
        with open(full_path, 'r', encoding='utf-8') as f:
            content = f.read()
        
        fields = []
        field_pattern = r'@Protobuf\(\s*fieldType\s*=\s*FieldType\.(\w+),\s*order\s*=\s*(\d+)'
        matches = re.findall(field_pattern, content)
        
        for match in matches:
            field_type, order = match
            fields.append({
                'type': field_type,
                'order': int(order)
            })
        
        return {'fields': fields}
    
    def create_proto_file(self, module_name: str, messages: List[Dict]):
        """åˆ›å»º proto æ–‡ä»¶"""
        proto_file = self.project_root / f'proto/dnf/v1/{module_name.lower()}.proto'
        
        # æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å·²å­˜åœ¨
        if proto_file.exists():
            # è¿½åŠ æ¨¡å¼
            mode = 'a'
            header = ''
        else:
            # æ–°å»ºæ¨¡å¼
            mode = 'w'
            header = f'''syntax = "proto3";

package dnf.v1;

option java_package = "com.dnfm.mina.stdproto";
option java_outer_classname = "{module_name.capitalize()}Proto";
option go_package = "dnf/v1";

'''
        
        with open(proto_file, mode, encoding='utf-8') as f:
            if header:
                f.write(header)
            
            for msg in messages:
                proto_message_name = self.convert_message_name(msg['message_name'])
                jprotobuf_file = self.read_jprotobuf_file(msg['file_path'])
                
                f.write(f'\n// {msg["message_name"]}\n')
                f.write(f'message {proto_message_name} {{\n')
                
                if jprotobuf_file.get('fields'):
                    for field in jprotobuf_file['fields']:
                        proto_type = self.convert_field_type(field['type'])
                        f.write(f'  {proto_type} field_{field["order"]} = {field["order"]};\n')
                else:
                    f.write(f'  // No fields\n')
                
                f.write('}\n')
        
        print(f"âœ… å·²åˆ›å»º/æ›´æ–° {proto_file.name}ï¼ŒåŒ…å« {len(messages)} ä¸ªæ¶ˆæ¯")
        return proto_file
    
    def update_database(self, batch_id: int, module_name: str, messages: List[Dict]):
        """æ›´æ–°æ•°æ®åº“"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # æ·»åŠ æ‰¹æ¬¡
        cursor.execute('''
            INSERT OR IGNORE INTO migration_batches (batch_number, batch_name, description, status, start_time)
            VALUES (?, ?, ?, 'completed', CURRENT_TIMESTAMP)
        ''', (batch_id, module_name, f'{module_name} æ¨¡å—è¿ç§» - æ‰¹é‡è¿ç§»'))
        
        proto_file_path = f'proto/dnf/v1/{module_name.lower()}.proto'
        
        for msg in messages:
            proto_message_name = self.convert_message_name(msg['message_name'])
            
            # æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯
            cursor.execute('''
                INSERT OR IGNORE INTO proto_messages (message_name, file_path, package_name, field_count)
                VALUES (?, ?, ?, ?)
            ''', (proto_message_name, proto_file_path, 'dnf.v1', msg['field_count']))
            
            # è·å–æ¶ˆæ¯ ID
            cursor.execute('SELECT id FROM jprotobuf_messages WHERE message_name = ?', (msg['message_name'],))
            jprotobuf_row = cursor.fetchone()
            
            if jprotobuf_row:
                jprotobuf_id = jprotobuf_row['id']
                
                cursor.execute('SELECT id FROM proto_messages WHERE message_name = ?', (proto_message_name,))
                proto_row = cursor.fetchone()
                
                if proto_row:
                    proto_id = proto_row['id']
                    
                    # æ·»åŠ æ˜ å°„å…³ç³»
                    cursor.execute('''
                        INSERT OR IGNORE INTO message_mappings (jprotobuf_message_id, proto_message_id, mapping_type, mapping_confidence, is_verified)
                        VALUES (?, ?, 'direct_mapping', 1.0, 1)
                    ''', (jprotobuf_id, proto_id))
                    
                    # æ·»åŠ è¿ç§»è®°å½•
                    cursor.execute('''
                        INSERT OR IGNORE INTO migration_records (batch_id, jprotobuf_message_id, proto_message_id, migration_status)
                        VALUES (?, ?, ?, 'completed')
                    ''', (batch_id, jprotobuf_id, proto_id))
        
        conn.commit()
        conn.close()
        print(f"âœ… å·²æ›´æ–°æ•°æ®åº“ï¼Œæ·»åŠ  {len(messages)} ä¸ªè¿ç§»è®°å½•")

def main():
    """ä¸»å‡½æ•°"""
    db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
    project_root = Path('/home/pix/dev/code/java/DnfGameServer')
    
    migrator = UniversalMigrator(db_path, project_root)
    
    print("ğŸ“ é€šç”¨æ‰¹é‡è¿ç§»æ‰€æœ‰å‰©ä½™æ¶ˆæ¯...")
    print()
    
    # è·å–æ‰€æœ‰æœªè¿ç§»çš„æ¶ˆæ¯
    messages = migrator.get_unmigrated_messages()
    print(f"ğŸ“Š æ‰¾åˆ° {len(messages)} ä¸ªæœªè¿ç§»çš„æ¶ˆæ¯")
    print()
    
    if len(messages) == 0:
        print("âœ… æ‰€æœ‰æ¶ˆæ¯å·²è¿ç§»å®Œæˆï¼")
        return
    
    # æŒ‰æ¨¡å—åˆ†ç»„
    modules = {}
    for msg in messages:
        module_id = msg['module_id']
        module_name = migrator.get_module_name(module_id)
        
        if module_name not in modules:
            modules[module_name] = []
        modules[module_name].append(msg)
    
    # æŒ‰æ¨¡å—è¿ç§»
    batch_start = 9  # ä»æ‰¹æ¬¡ 9 å¼€å§‹
    for module_name, module_messages in sorted(modules.items()):
        print(f"ğŸ”„ è¿ç§»æ¨¡å—: {module_name} ({len(module_messages)} ä¸ªæ¶ˆæ¯)")
        
        # åˆ†æ‰¹å¤„ç†ï¼Œæ¯æ‰¹ 20 ä¸ª
        batch_size = 20
        for i in range(0, len(module_messages), batch_size):
            batch_messages = module_messages[i:i+batch_size]
            batch_num = batch_start + (i // batch_size)
            
            # åˆ›å»º/æ›´æ–° proto æ–‡ä»¶
            migrator.create_proto_file(module_name, batch_messages)
            
            # æ›´æ–°æ•°æ®åº“
            migrator.update_database(batch_num, module_name, batch_messages)
            
            print()
        
        batch_start += (len(module_messages) + batch_size - 1) // batch_size
    
    print("âœ… æ‰€æœ‰æ¨¡å—æ‰¹é‡è¿ç§»å®Œæˆï¼")

if __name__ == '__main__':
    main()
